--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -5,15 +5,14 @@ pipeline {
     }
     agent {
       node {
-        //TODO: Add label for the Maven jenkins agent
+        label 'maven'
       }
     }
 
     environment {
-        //TODO: Customize these variables for your environment
-        DEV_PROJECT = "youruser-movies-dev"
-        STAGE_PROJECT = "youruser-movies-stage"
-        APP_GIT_URL = "https://github.com/youruser/DO288-apps"
+        DEV_PROJECT = "mauroave-movies-dev"
+        STAGE_PROJECT = mauroave-movies-stage"
+        APP_GIT_URL = "https://github.com/mauroavendano/DO288-apps"
         NEXUS_SERVER = "http://nexus-common.apps.cluster.domain.example.com/repository/java"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
